# hello-github-CICD

./: Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: build_and_test.yml  deploy.yml
src/hexencoder/: __init__.py  main.py
tests/: curl_api.sh  test_hexencoder.py
