[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexencoder"
version = "0.1.0"
description = "A FastAPI service for hex encoding and decoding"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["fastapi>=0.116.1", "uvicorn==0.35.0", "pytest==8.4.1"]

[tool.setuptools.packages.find]
where = ["src"]
